# silver-guacamole

tdd-demo/: .gitignore  package.json  pyproject.toml
tdd-demo/tdd-demo/: functional_tests.py
tdd-demo/tdd-demo/deploy_tools/: fabfile.py  gunicorn-systemd.template.service  nginx.template.conf  provisioning_notes.md
tdd-demo/tdd-demo/functional_tests/: tests.py
tdd-demo/tdd-demo/lists/: models.py  tests.py  views.py
tdd-demo/tdd-demo/lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py
tdd-demo/tdd-demo/lists/static/: base.css
tdd-demo/tdd-demo/lists/templates/: base.html  home.html  list.html
tdd-demo/tdd-demo/superlists/: settings.py  urls.py
